<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView style="@style/CardViewFilter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/filterTitle"
                style="@style/StrongTitleFilter"
                android:text="@string/filterTitle" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayoutCollapse"

    android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/labelNomeFilter"
                    style="@style/LabelsFilter"
                    android:text="@string/cadastroNomeRestaurante" />

                <EditText
                    android:id="@+id/etFilterNome"
                    style="@style/FilterEditName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space style="@style/SpaceVertical20Dp" />


                <TextView
                    style="@style/LabelsFilter"
                    android:text="@string/cadastroPrecoRestaurante" />

            </LinearLayout>

            <Space style="@style/SpaceVertical20Dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    style="@style/LabelsFilter"
                    android:text="@string/filterDE" />


                <EditText
                    android:id="@+id/etFilterDe"
                    style="@style/FilterEditCusto"

                    />


                <TextView
                    style="@style/LabelsFilter"
                    android:text="@string/filterATE" />


                <EditText
                    android:id="@+id/etFilterAte"
                    style="@style/FilterEditCusto"

                    />


            </LinearLayout>

            <Space style="@style/SpaceVertical20Dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    style="@style/LabelsFilter"
                    android:text="@string/cadastroTipoRestaurante" />

                <Spinner
                    android:id="@+id/spinnerTipoRestauranteFilter"
                    style="@style/SpinnerCadastroLinearValues" />


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_search"
                    android:id="@+id/filterSearch"/>

            </LinearLayout>

</LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvListRestaurantes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />


</LinearLayout>