<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:id="@+id/ivDetailsFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detailstoolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            >


        <TextView
            android:layout_width="wrap_content"

            android:layout_column="0"
            android:text="@string/cadastroTelefoneRestaurante"
            android:id="@+id/tvDetailsLabelTelefone"
            style="@style/DetailsTextView"
            />




        <TextView
            android:layout_width="match_parent"
            style="@style/DetailsTextView"

            android:layout_column="1"
            android:id="@+id/tvDetailsTelefone"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:text="@string/cadastroTipoRestaurante"
                android:id="@+id/tvDetailsLabelTipo"
                style="@style/DetailsTextView"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_column="1"
                android:id="@+id/tvDetailsTipo"
                style="@style/DetailsTextView"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:text="@string/cadastroPrecoRestaurante"
                android:id="@+id/tvDetailsLabelCusto"
                style="@style/DetailsTextView"
                android:padding="@dimen/activity_horizontal_margin"
                />


            <TextView
                android:layout_width="match_parent"
                style="@style/DetailsTextView"

                android:layout_column="1"
                android:id="@+id/tvDetailsCusto"
                android:padding="@dimen/activity_horizontal_margin"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_column="0"
                style="@style/DetailsTextView"

                android:text="@string/cadastroObservacaoRestaurante"
                android:id="@+id/tvDetailsLabelObservacao"
                android:padding="@dimen/activity_horizontal_margin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:text="dsadasdasdasdasdasdas"
                android:id="@+id/tvDetailsObservacao"
                style="@style/DetailsTextView"
                android:padding="@dimen/activity_horizontal_margin"
                />
        </GridLayout>


            <View
                style="@style/ViewSeparatorHorizontal"/>


            <fragment
                android:id="@+id/detailsMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detailsMapHeight"
                />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/editFab"
        android:src="@drawable/ic_edit"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        />


</android.support.design.widget.CoordinatorLayout>
